<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kdg.kandoe.kandoe.activity.RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_linearlayout_username">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/register_txt_username"
                />
            <EditText
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:id="@+id/register_txt_firstname"
                />
            <EditText
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_firstname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:id="@+id/register_txt_lastname"
                />
            <EditText
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_lastname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:id="@+id/register_txt_email"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_email"
                android:layout_below="@+id/register_txt_email"
                android:layout_alignParentStart="true"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/register_txt_password"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentStart="true" />

            <EditText
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_password"
                android:layout_below="@+id/register_txt_password"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:id="@+id/register_txt_confirm"
                android:layout_below="@+id/register_input_password"
                android:layout_alignParentStart="true" />

            <EditText
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_confirm"
                android:layout_below="@+id/register_txt_confirm"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_btn_register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
