<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:id="@+id/organisation_base">
    <include
        android:id="@+id/organisation_toolbar"
        layout="@layout/toolbar">
    </include>
    <ListView
        android:id="@+id/organisations_listview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:cacheColorHint="@android:color/transparent"
        android:headerDividersEnabled="false"
        android:overScrollMode="never"
        android:scrollbarStyle="outsideOverlay"
        android:layout_marginLeft="@dimen/margin_card"
        android:layout_marginRight="@dimen/margin_card"
        android:layout_below="@+id/organisation_toolbar"/>
</RelativeLayout>
